8068977: Remove unused sun.misc.Unsafe prefetch intrinsic support

Reviewed-by: kvn, vlivanov